dev/neo4j/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neo4j-deployment
spec:
  selector:
    matchLabels:
      app: neo4j
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: neo4j
    spec:
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: neo4j
      containers:
      - name: neo4j
        image: neo4j
        args:
        #- server
        ports:
        - name: http
          protocol: TCP
          containerPort: 7474
        - name: bolt
          protocol: TCP
          containerPort: 7687
        volumeMounts:
        - name: storage # must match the volume name, above
          mountPath: "/data"
