dev/neo4j/service-node.yaml
#
# dev only!! the communication will be unsecure!!
#
apiVersion: v1
kind: Service
metadata:
  name: neo4j-node
  labels:
    app: neo4j
spec:
  type: NodePort
  ports:
  - name: http
    port: 7474
    targetPort: 7474
    protocol: TCP
    nodePort: 31120
  - name: bolt
    port: 7687
    targetPort: 7687
    protocol: TCP
    nodePort: 31121
  - name: https
    port: 7473
    targetPort: 7473
    protocol: TCP
    nodePort: 31122
  selector:
    app: neo4j
