dev/neo4j/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neo4j
  labels:
    app: neo4j
spec:
  ports:
  - name: http
    port: 7474
    targetPort: 7474
    protocol: TCP
  - name: https
    port: 7473
    targetPort: 7473
    protocol: TCP
  - name: bolt
    port: 7687
    targetPort: 7687
    protocol: TCP
  selector:
    app: neo4j
