dev/neo4j/ingress-browser.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neo4j-browser
  namespace: default    # namespace must be the same as the backend service!
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: dev.imicros.de # CHANGE ME!
    http:
      paths:
      - path: /neo4j/(.*)
        pathType: Prefix
        backend:
          service:
            name: neo4j
            port:
              number: 7474
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  - hosts:
    - dev.imicros.de
    secretName: imicros-cert # < cert-manager will store the created certificate in this secret.
